--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <script src="https://cdn.jsdelivr.net/npm/p5@1.11.9/lib/p5.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.9/addons/p5.sound.min.js"></script>
 
-        <script src="sketch.js"></script>
+        <script src="https://github.com/lorrettalu/Web-Sketch-Starter/blob/main/sketch.js"></script>
       </div>
       <div class="buttons">
         <!--<button id="muteBtn">Mute On/Off</button>-->
