--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         font-size: 16px;
         cursor: pointer;
         margin-bottom: 20px;
+        flex-wrap: wrap;
       }
       button:hover {
         background-color: #dce8ff;
